test/files/neg/t11136.check
t11136.scala:12: error: cannot override final member:
final override def c(x: Int): Int (defined in trait SO)
  with override def c(x: Int): Int (defined in trait SOIO)
class L extends AS with SOSO // error expected: c definined in SOIO overrides final method c in SO
      ^
one error found
